# Docs2static

./: .gitignore  404.html  README.md  env_example  guideline.md  index.html  main.py  metadata.json  pyproject.toml  search.json  test_main.py  zensical_backend.py
.github/workflows/: publish.yml
agenda/: index.html  metadata.json
docs2dsfr/: README.md
docs2static/: __init__.py  main.py  zensical_backend.py
docs2static/assets/overrides/: main.html
docs2static/assets/stylesheets/: home.css
docs2static/assets/templates/phantom/overrides/: main.html
docs2static/assets/templates/phantom/stylesheets/: home.css
premier-enfant-sous-partie/: index.html  metadata.json
premier-enfant-sous-partie/dernier-petit-enfant/: index.html  metadata.json
premier-enfant-sous-partie/petit-enfant-sous-sous-partie/: index.html  metadata.json
premier-enfant-sous-partie/petit-enfant-sous-sous-partie/et-voici-un-n-4/: index.html  metadata.json
premier-enfant-sous-partie/premier-petit-enfant/: index.html  metadata.json
second-enfant-deuxieme-sous-partie/: index.html  metadata.json
stylesheets/: home.css
tests/: test_main.py
