[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docs2static"
version = "0.3"
description = "Fetch collaborative documents from a Docs instance and generate static sites with Zensical"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.14"
authors = [
    { name = "CoopCodeCommun", email = "contact@tibillet.re" },
    { name = "Jonas TURBEAUX", email = "jturbeaux@pm.me" },
]
keywords = ["documentation", "static-site", "zensical", "docs", "markdown"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "colorlog>=6.10.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "requests-cache>=1.2.1",
    "zensical>=0.0.17",
]

[project.scripts]
docs2static = "docs2static.main:main"

[project.urls]
Homepage = "https://github.com/CoopCodeCommun/Docs2static"
Repository = "https://github.com/CoopCodeCommun/Docs2static"

[tool.hatch.build.targets.wheel]
packages = ["docs2static"]

[tool.hatch.build.targets.sdist]
include = ["docs2static/", "README.md", "LICENSE"]
